--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ html, body {
 }
 canvas {
   display: block;
-  width: 600px;
+  max-width: 600px ;
+  max-height: 600px ;
   margin: 20px auto;
 }
 
@@ -18,7 +19,7 @@ h1 {
 }
 
 #controls {
-	width: 650px;
+	max-width: 650px;
 	margin: -10px auto 5px;
 }
 
