--- a/style.css
+++ b/style.css
@@ -18,9 +18,46 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+	font-size: 35px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+input[type = "text"] {
+	border-radius: 10px;
+	height: 15px;
+	margin-top: 10px;
+}
+
+a {
+	text-decoration: none;
+	color: #d8f;
+}
+
+a:hover {
+	text-shadow: 0px 0px 5px #daf;
+}
+
+hr {
+	width: 80%;
+}
+
+ul {
+	font-size: 25px;
+	list-style-type: circle;
+}
+
+footer {
+	text-align: center;
+	font-size: 25px;
+}
+
 #controls {
+	position: relative;
+	left: 20px;
 	max-width: 650px;
-	margin: -10px auto 5px;
+	margin: -10px auto 15px;
 }
 
 #controls span {
@@ -48,3 +85,22 @@ h1 {
 #saveImage {
 	margin-left: 10px;
 }
+
+.instructionContainer {
+	text-align: center;
+	width: 80%;
+	margin: 0px auto;
+}
+
+.instructionContainer p, li {
+	font-size: 25px;
+	color: #ddd;
+	text-align: left;
+}
+
+
+
+
+
+
+
