--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@ html, body {
   padding: 0;
   background-color: #111;
   color: #eee;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', Courier New;
 }
 canvas {
   display: block;
   max-width: 600px ;
   max-height: 600px ;
-  margin: 20px auto;
+  margin: 5px auto 20px;
 }
 
 h1 {
@@ -51,6 +51,65 @@ ul {
 footer {
 	text-align: center;
 	font-size: 25px;
+}
+
+#menuIcon {
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	justify-content: space-evenly;
+	height: 30px;
+	width: 30px;
+	margin-left: 10%;
+	z-index: 5;
+}
+
+.menuItem {
+	height: 3px;
+	border-radius: 5px;
+	background-color: #aaa;
+	position: relative;
+	z-index: 5;
+	transition: opacity 0.5s, transform 0.5s;
+}
+
+#menuIcon:hover .menuItem{
+	background-color: #eee;
+}
+
+#menu {
+	display: block;
+	position: absolute;
+	width: 90vw;
+	height: 0px;
+	max-height: 600px;
+	max-width: 400px;
+	background-color: rgba(30, 30, 30, 0.95);
+	top: -5px;
+	left: 5vw;
+	border-radius: 10px; 
+	transition: height 0.5s;
+}
+
+#menuInnerContainer {
+	margin-top: 46px;
+	height: calc(100% - 46px);
+	overflow-y: scroll;
+}
+
+#menu h3 {
+	margin: 0px 15px 10px;
+	font-size: 25px;
+}
+
+#menu hr {
+	width: 90%;
+
+}
+
+#menu img {
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 #controls {
@@ -95,10 +154,3 @@ footer {
 	color: #ddd;
 	text-align: left;
 }
-
-
-
-
-
-
-
